[build-system]
requires = ["setuptools>=42", "wheel"] # add "setuptools_scm" if we want to use github tags for versioning
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[project]
name = "PyCorese"
dynamic = ["version"]
authors = [
    { name = "Anna Bobasheva", email = "anna.bobasheva@inria.fr" },
]
description = "PyCorese - Corese SPARQL engine Python API."
keywords = ["Query Engine", "SPARQL", "SHACL", "RDF", "RDFS", "OWL", "Reasoning", "Knowledge Graph"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "py4j>=0.10.9.7",
  "jpype1>=1.5.0",
]

# TODO: set proper classifiers here
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Wimmics/PyCorese"
Issues = "https://github.com/Wimmics/PyCorese/issues"
Documentation = "https://wimmics.github.io/PyCorese/"
Repository = "https://github.com/Wimmics/pycorese.git"

[tool.pytest.ini_options]
# We follow the pytest recommendations by setting the `import-mode` and using
# the `src/tests` layout.
# https://docs.pytest.org/en/stable/explanation/goodpractices.html#tests-outside-application-code
testpaths = [
    "src/",
    "tests/"
]
pythonpath = "src"

# Adding the Java jars to the package
# https://setuptools.pypa.io/en/stable/userguide/datafiles.html#package-data
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
#"*" = ["jars/*.jar"]
"PyCorese" = ["jars/*.jar"]



